DuPont DevSB/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>L1 Lead Process</fullName>
        <description>Level 1 Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Capture</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>End</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Respond</fullName>
        </values>
        <values>
            <fullName>Route</fullName>
        </values>
        <values>
            <fullName>Track</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>L2 Lead Process</fullName>
        <description>Level 2 Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Capture</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>End</fullName>
        </values>
        <values>
            <fullName>End-Abandoned</fullName>
        </values>
        <values>
            <fullName>End-Lost</fullName>
        </values>
        <values>
            <fullName>End-Won</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Respond</fullName>
        </values>
        <values>
            <fullName>Route</fullName>
        </values>
        <values>
            <fullName>Track</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Academic_Title__c</fullName>
        <label>Academic Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CIH</fullName>
                </value>
                <value>
                    <fullName>CSP</fullName>
                </value>
                <value>
                    <fullName>Jr.</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Subtype__c</fullName>
        <label>Account Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Academia/Education</fullName>
                </value>
                <value>
                    <fullName>Academia/Student</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Design Services</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Marketing/Advertising</fullName>
                </value>
                <value>
                    <fullName>Oil Company</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Recycler</fullName>
                </value>
                <value>
                    <fullName>Research/Technical</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Indirect Customer</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Description Name of the Account this Lead belongs to</description>
        <inlineHelpText>Use this field in situations where the Company this Lead is coming from is already existing in the Account tab</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Closed_Date__c</fullName>
        <label>Actual Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AddressAccuracy__c</fullName>
        <description>Address Accuracy from geocoder</description>
        <label>Address Accuracy</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Privacy_Notification_Date__c</fullName>
        <description>Use in conjunction with the Alternate Privacy Notification field to identify when the privacy notification was provided to the Lead via a manual procedure.</description>
        <inlineHelpText>Identify the date when DuPont’s Privacy Policy was provided to the Lead via a manual procedure.</inlineHelpText>
        <label>Alternate Privacy Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alternate_Privacy_Notification__c</fullName>
        <description>Used to indicate the manual action which was taken to notify the lead of DuPont&apos;s privacy policy.</description>
        <inlineHelpText>Identify the manual action taken to notify Lead of DuPont&apos;s privacy policy.</inlineHelpText>
        <label>Alternate Privacy Notification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Grandfathered – No Notification Needed</fullName>
                </value>
                <value>
                    <fullName>Notified by 3rd Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Comment__c</fullName>
        <description>Comments further describing this application</description>
        <inlineHelpText>Comments further describing this application</inlineHelpText>
        <label>Application Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Segment</label>
        <referenceTo>Segmentation__c</referenceTo>
        <relationshipLabel>Leads (Application Segment)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Benchmark Company</fullName>
                </value>
                <value>
                    <fullName>Cable Insulation</fullName>
                </value>
                <value>
                    <fullName>Fuser Roller</fullName>
                </value>
                <value>
                    <fullName>Leadership for Safety</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Reduce Injuries</fullName>
                </value>
                <value>
                    <fullName>Safety Awareness</fullName>
                </value>
                <value>
                    <fullName>World Class Safety</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BI_Account_SubType__c</fullName>
        <description>Building Innovations subType of account</description>
        <label>BI Account SubType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BU_Answer1__c</fullName>
        <description>Lead answer to BU Question1</description>
        <label>BU Answer1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BU_Answer2__c</fullName>
        <description>Answer to BU Question 2</description>
        <label>BU Answer2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BU_Answer3__c</fullName>
        <description>Answer to BU Question 3</description>
        <label>BU Answer3</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BU_Question1__c</fullName>
        <description>Name of the Question 1 this business unit has defined</description>
        <label>BU Question1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Question2__c</fullName>
        <label>BU Question2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Question3__c</fullName>
        <label>BU Question3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bounced is captured at the record on the eMail object and pushed to Leads &amp; Contact records based on email address. Whenever a lead and contact eMail is updated the bounced flag is released.</description>
        <inlineHelpText>This is a READ ONLY field which is updated from a corresponding record in the eMail object.</inlineHelpText>
        <label>Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Language__c</fullName>
        <label>Business Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFRIKAANS</fullName>
                </value>
                <value>
                    <fullName>ALBANIAN</fullName>
                </value>
                <value>
                    <fullName>ARABIC</fullName>
                </value>
                <value>
                    <fullName>ARMENIAN</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJANI</fullName>
                </value>
                <value>
                    <fullName>BASQUE</fullName>
                </value>
                <value>
                    <fullName>BULGARIAN</fullName>
                </value>
                <value>
                    <fullName>BURMESE</fullName>
                </value>
                <value>
                    <fullName>BYELORUSSIAN</fullName>
                </value>
                <value>
                    <fullName>CHINESE</fullName>
                </value>
                <value>
                    <fullName>CHINESE (Traditional)</fullName>
                </value>
                <value>
                    <fullName>CROATIAN</fullName>
                </value>
                <value>
                    <fullName>CZECH</fullName>
                </value>
                <value>
                    <fullName>DANISH</fullName>
                </value>
                <value>
                    <fullName>DUTCH</fullName>
                </value>
                <value>
                    <fullName>ENGLISH</fullName>
                </value>
                <value>
                    <fullName>ESTONIAN</fullName>
                </value>
                <value>
                    <fullName>FINNISH</fullName>
                </value>
                <value>
                    <fullName>FRENCH</fullName>
                </value>
                <value>
                    <fullName>GERMAN</fullName>
                </value>
                <value>
                    <fullName>GREEK</fullName>
                </value>
                <value>
                    <fullName>HEBREW</fullName>
                </value>
                <value>
                    <fullName>HINDI</fullName>
                </value>
                <value>
                    <fullName>HUNGARIAN</fullName>
                </value>
                <value>
                    <fullName>ICELANDIC</fullName>
                </value>
                <value>
                    <fullName>INDONESIAN</fullName>
                </value>
                <value>
                    <fullName>ITALIAN</fullName>
                </value>
                <value>
                    <fullName>JAPANESE</fullName>
                </value>
                <value>
                    <fullName>KOREAN</fullName>
                </value>
                <value>
                    <fullName>LATIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_User_Record_Id__c</fullName>
        <label>Business User Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityDistrict__c</fullName>
        <label>City District</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Comments__c</fullName>
        <description>Comments clarifying the end/closure of this specific lead (e.g. learnings, details explaining why and how this lead ended)</description>
        <inlineHelpText>Comments clarifying the end/closure of this specific lead (e.g. learnings, details explaining why and how this lead ended)</inlineHelpText>
        <label>Close Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitive_Info__c</fullName>
        <label>Competitive Info</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Preference__c</fullName>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>eMail</fullName>
                </value>
                <value>
                    <fullName>Face to Face</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Paper mail</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>Type of Contact management applied this this person (e.g. &quot;Marketing Automation&quot; if this contact is in the scope of a Marketing Nurturing program)</description>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Automation</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>Latin America will use this field to capture Colonia and Delegacion</description>
        <label>County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPC_Product__c</fullName>
        <inlineHelpText>This field will map to Primary Supplier (current) on Account &amp; Starting Product on Opportunity when the lead is converted.</inlineHelpText>
        <label>DPC Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                    <default>true</default>
                    <label>Inbound</label>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailHash__c</fullName>
        <description>Hashed  email</description>
        <label>EmailHash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Data__c</fullName>
        <label>Extended Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FIPS__c</fullName>
        <description>FIPS</description>
        <label>FIPS</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food_Applications__c</fullName>
        <description>Multi-select picklist of applications for the Food Industry</description>
        <label>Food Applications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alcohol beverages</fullName>
                </value>
                <value>
                    <fullName>Animal Feed</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Aquaculture</fullName>
                </value>
                <value>
                    <fullName>Artisan Bread</fullName>
                </value>
                <value>
                    <fullName>Avocado</fullName>
                </value>
                <value>
                    <fullName>Bakery</fullName>
                </value>
                <value>
                    <fullName>Baking - Anti-Dusting</fullName>
                </value>
                <value>
                    <fullName>Baking - Emulsification</fullName>
                </value>
                <value>
                    <fullName>Baking - Extrusion</fullName>
                </value>
                <value>
                    <fullName>Baking - Instantizing</fullName>
                </value>
                <value>
                    <fullName>Baking - Milk Replacement</fullName>
                </value>
                <value>
                    <fullName>Baking - Nutrition Fortification</fullName>
                </value>
                <value>
                    <fullName>Baking - Release</fullName>
                </value>
                <value>
                    <fullName>Banana</fullName>
                </value>
                <value>
                    <fullName>Barley</fullName>
                </value>
                <value>
                    <fullName>Bean</fullName>
                </value>
                <value>
                    <fullName>Beef</fullName>
                </value>
                <value>
                    <fullName>Beverages</fullName>
                </value>
                <value>
                    <fullName>Black Oat</fullName>
                </value>
                <value>
                    <fullName>Bread &amp; yeast-raised products industrial</fullName>
                </value>
                <value>
                    <fullName>Broccoli</fullName>
                </value>
                <value>
                    <fullName>Cabbage</fullName>
                </value>
                <value>
                    <fullName>Cakes</fullName>
                </value>
                <value>
                    <fullName>Carbonated drinks</fullName>
                </value>
                <value>
                    <fullName>Carrot</fullName>
                </value>
                <value>
                    <fullName>Cheeses, hard, semi-hard, soft</fullName>
                </value>
                <value>
                    <fullName>Chewing gum and gum base</fullName>
                </value>
                <value>
                    <fullName>Citrus</fullName>
                </value>
                <value>
                    <fullName>Clinical Nutrition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Submission_ID__c</fullName>
        <description>Identification code or transaction parameter used to identify a web form or landing page submitted into SFDC by a form submission system (i.e. Adobe CQ)</description>
        <label>Form Submission ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hasattachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>There is a trigger to check whether there is an Attachment on the record</description>
        <label>Hasattachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incorrect_Email__c</fullName>
        <description>Captures any invalid email address submitted using Web2Lead that would otherwise fail due to the privacy notification automated process.</description>
        <label>Incorrect Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Influence_Type__c</fullName>
        <description>The Role this Lead plays in the Buying Process.</description>
        <inlineHelpText>Describes the type or level of influence this lead has within his company (this field used to be called &quot;Buying Process Role&quot;)</inlineHelpText>
        <label>Influence Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Authorizer</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Door Opener</fullName>
                </value>
                <value>
                    <fullName>Gate Keeper</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Key Decision Maker</fullName>
                </value>
                <value>
                    <fullName>No Role</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Recommend/Specifier</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <description>Specific areas of interest of this Lead. An Interest is an activity or subject which a person enjoys or studies; often evokes a sense of concern or curiosity; may be a subject of importance or consequence</description>
        <label>Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Asset Prod/Maintenance</fullName>
                </value>
                <value>
                    <fullName>Capital Effectiveness</fullName>
                </value>
                <value>
                    <fullName>Consulting &amp; Customized Services</fullName>
                </value>
                <value>
                    <fullName>Contractor Mgmt</fullName>
                </value>
                <value>
                    <fullName>DVD</fullName>
                </value>
                <value>
                    <fullName>Employee Safety</fullName>
                </value>
                <value>
                    <fullName>Energy Efficiency</fullName>
                </value>
                <value>
                    <fullName>Environmental Mgmt</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Instructor-Led Training</fullName>
                </value>
                <value>
                    <fullName>L&amp;D eLearning</fullName>
                </value>
                <value>
                    <fullName>L&amp;D Video Streaming</fullName>
                </value>
                <value>
                    <fullName>Learning &amp; Development Services</fullName>
                </value>
                <value>
                    <fullName>Learning and Development</fullName>
                </value>
                <value>
                    <fullName>Maintenance &amp; Reliability</fullName>
                </value>
                <value>
                    <fullName>Operations Excellence</fullName>
                </value>
                <value>
                    <fullName>Process Performance</fullName>
                </value>
                <value>
                    <fullName>Process Safety Mgmt</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Safety and Operational Risk Management</fullName>
                </value>
                <value>
                    <fullName>Safety Perception Survey</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Sustainability &amp; Value Creation</fullName>
                </value>
                <value>
                    <fullName>Training - Unspecified</fullName>
                </value>
                <value>
                    <fullName>Video Streaming</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Channel_Type__c</fullName>
        <description>This field will originally be equal to the Origin Channel Type field, however, as the lead is updated based on multiple lead nurturing actions, this field will reflect the most recent Origin Channel Type.</description>
        <inlineHelpText>This field will originally be equal to the Origin Channel Type field, however, as the lead is updated based on multiple lead nurturing actions, this field will reflect the most recent Origin Channel Type.</inlineHelpText>
        <label>Last Channel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>eMail</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Face to Face</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Phone-Inbound-Local</fullName>
                </value>
                <value>
                    <fullName>Phone-Inbound-Toll Free</fullName>
                </value>
                <value>
                    <fullName>Phone-Outbound Cold Call</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>Latitude</description>
        <label>Latitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadIDCopy__c</fullName>
        <description>A unique ID autopopulated by Salesforce.com</description>
        <label>Lead ID Copy</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>